--- a/models/staging/orders/src_shopify_orders.yml
+++ b/models/staging/orders/src_shopify_orders.yml
@@ -1,6 +1,7 @@
 version: 2
 sources:
   - name: shopify_de
+    description: order data that comes from the German shopify shop
     database: leslunes-raw
     tables:
       - name: orders
