--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -36,8 +36,10 @@ clean-targets:         # directories to be removed by `dbt clean`
 # In this example config, we tell dbt to build all models in the example/ directory
 # as tables. These settings can be overridden in the individual model files
 # using the `{{ config(...) }}` macro.
-#models:
-#  leslunes_analytics:
+models:
+  leslunes_analytics:
       # Applies to all files under models/example/
-#      example:
-#          materialized: view
+      coupons:
+          materialized: view
+      posts:
+          materialized: view
