--- a/models/staging/orders/src_orders.yml
+++ b/models/staging/orders/src_orders.yml
@@ -6,10 +6,12 @@ sources:
     tables:
       - name: orders
   - name: shopify_fr
+    description: order data that comes from the French shopify shop
     database: leslunes-raw
     tables:
       - name: orders
   - name: shopify_it
+    description: order data that comes from the Italian shopify shop
     database: leslunes-raw
     tables:
       - name: orders
