--- a/models/staging/costs/src_costs.yml
+++ b/models/staging/costs/src_costs.yml
@@ -1,2 +1,9 @@
 version: 2
 
+sources:
+  - name: facebook_ads_costs
+    description: performance marketing costs arised in facebook ads
+    database: leslunes-raw
+    schema: facebook_ads
+    tables: 
+      - name: ads_insights
