add orders to facts

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -83,6 +83,9 @@ models:
           schema: 'xentral'
         zendesk:
           schema: 'zendesk'
+      marts:
+        core:
+          schema: 'core'
 
 
 
