--- a/models/staging/orders/stg_orders.yml
+++ b/models/staging/orders/stg_orders.yml
@@ -1,4 +1,27 @@
 version: 2
 
-
- 
+models:
+  - name: stg_unique_orders_de
+    columns:
+      - name: test
+        tests:
+          - accepted_values:
+             quote:  false
+             values:
+              - False
+  - name: stg_unique_orders_fr
+    columns:
+      - name: test
+        tests:
+          - accepted_values:
+             quote:  false
+             values:
+              - False
+  - name: stg_unique_orders_it
+    columns:
+      - name: test
+        tests:
+          - accepted_values:
+             quote:  false
+             values:
+              - False
