add zendesk tags to staging, update orders, add influencer posts

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -91,6 +91,10 @@ models:
         core:
           schema: 'core'
           database: 'leslunes-rep'
+        marketing:
+          inf_marketing:
+            schema: 'inf_marketing'
+            database: 'leslunes-rep'
 
 
 
