update shipments, events and orders

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -91,6 +91,9 @@ models:
         core:
           schema: 'core'
           database: 'leslunes-rep'
+        events:
+          schema: 'events'
+          database: 'leslunes-rep'
         marketing:
           inf_marketing:
             schema: 'inf_marketing'
