--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -44,43 +44,37 @@ models:
         bq_costs:
           schema: 'bq_costs'
         costs:
-            schema: 'costs'
+          schema: 'costs'
         customers:
-            schema: 'customers'
+          schema: 'customers'
         events:
           schema: 'events'
         gsheets:
           schema: 'gsheets'
-        google_analytics:
-          schema: 'google_analytics'
         influencer:
-            schema: 'influencer'
-        items:
-            schema: 'items'
+          schema: 'influencer'
         nl_marketing:
-            schema: 'nl_marketing'
-        marketing:
-          schema: 'marketing'
+          schema: 'nl_marketing'
         orders:
           schema: 'orders'
+        orderitems:
+          schema: 'orderitems'
         payments:
-            schema: 'payments'
+          schema: 'payments'
         posts:
-            schema: 'posts'
+          schema: 'posts'
         products:
           schema: 'products'
         refunds:
           schema: 'refunds'
         returns:
-            schema: 'returns'
+          schema: 'returns'
         sales:
           schema: 'sales'
         sales_channel:
           schema: 'sales_channel'
-        scm:
-          schema: 'scm'
         shipments:
-            schema: 'shipments'
+          schema: 'shipments'
         surveys:
           schema: 'surveys'
         xentral:
