add transactions schema to project-yml

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -77,6 +77,8 @@ models:
           schema: 'shipments'
         surveys:
           schema: 'surveys'
+        transactions:
+          schema: 'transactions'
         xentral:
           schema: 'xentral'
         zendesk:
