add zenfulfillment dataset to dbt

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -81,6 +81,8 @@ models:
           schema: 'xentral'
         zendesk:
           schema: 'zendesk'
+        zenfulfillment:
+          schema: 'zenfulfillment'
       marts:
         core:
           schema: 'core'
