add scn dataset

--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -77,6 +77,8 @@ models:
           schema: 'sales'
         sales_channel:
           schema: 'sales_channel'
+        scm:
+          schema: 'scm'
         shipments:
           schema: 'shipments'
         surveys:
